--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,6 +58,6 @@ jobs:
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
             # Выполняет pull образа с DockerHub
-            sudo docker pull ksenyam/infra
+            sudo docker pull ksenyam/infra:latest
             sudo docker stop $(sudo docker ps -a -q)
-            sudo docker run --rm -d -p 5000:5000 ksenyam/infra
+            sudo docker run --rm -d -p 5000:5000 ksenyam/infra:latest
